--- a/articles.html
+++ b/articles.html
@@ -22,7 +22,7 @@
 <link href="/css/site.css" rel="stylesheet"> 		
 	</head>
 	<body> 
-		<nav class="navbar-site scroll navbar   ">
+		<nav class="navbar__block  is--scroll  navbar">
 	<div class="navbar__inner">
 		<div class="container navbar__container">
 			<div class="navbar__header">
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-</nav>
+</nav> 
 		<main class="content-block__panel">
 	<div class="content-block__container container  is--full">
 		<div class="page-header__panel  is--page-heading  is--center">				
