--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
 <link href="/css/site.css" rel="stylesheet"> 		
 	</head>
 	<body> 
-		<nav class="navbar-site scroll navbar   ">
+		<nav class="navbar__block  is--scroll  navbar">
 	<div class="navbar__inner">
 		<div class="container navbar__container">
 			<div class="navbar__header">
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-</nav> 
+</nav>  
 		<div class="kontakty-panel__block"  id="{{content_id}}">
 	<div class="kontakty-panel__panel">
 		<div class="page-header__panel  is--page-heading">
@@ -332,7 +332,7 @@ document.createElement("picture");
 	</div>
 </div>
 		<!-- <script src="/js/google-map.js"></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5mvq0SP3WCozmHWsYmfdLq_Y3vlaosik&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANLxdBSU8fJGR5IzCxzgTbVTdgOsJXcq4&callback=initMap"
     async defer></script>
 	</body>
 </html>
