--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link href="/css/site.css" rel="stylesheet"> 		
 	</head>
 	<body class="is--index-page"> 
-		<nav class="navbar-site scroll navbar is--index">
+		<nav class="navbar__block  is--scroll  is--index  navbar">
 	<div class="navbar__inner">
 		<div class="container navbar__container">
 			<div class="navbar__header">
@@ -638,7 +638,7 @@ document.createElement("picture");
 	</div>
 </div>
 		<!-- <script src="/js/google-map.js"></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5mvq0SP3WCozmHWsYmfdLq_Y3vlaosik&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANLxdBSU8fJGR5IzCxzgTbVTdgOsJXcq4&callback=initMap"
     async defer></script>
 	</body>
 </html>
