--- a/news.html
+++ b/news.html
@@ -21,8 +21,8 @@
 
 <link href="/css/site.css" rel="stylesheet"> 		
 	</head>
-	<body class="is--navbar-bottom">  
-		<nav class="navbar-site scroll navbar   ">
+	<body>
+		<nav class="navbar__block  is--scroll  navbar">
 	<div class="navbar__inner">
 		<div class="container navbar__container">
 			<div class="navbar__header">
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-</nav>
+</nav> 
 			
 		<footer class="footer__block">	
 	<div class="footer__inner">	
