--- a/src/block/site/default/navbar/navbar.html
+++ b/src/block/site/default/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="{{class}} navbar {{navbar_mod}}">
+<nav class="{{navbar_prefix}}block  {{navbar_mod}}  navbar">
 	<div class="{{navbar_prefix}}inner">
 		<div class="container {{navbar_prefix}}container">
 			<div class="{{navbar_prefix}}header">
