--- a/src/html/action-card.html
+++ b/src/html/action-card.html
@@ -9,11 +9,10 @@
 	</head>
 	<body> 
 		[[azbntple 
-			tpl="/src/block/site/default/navbar/.html"
-			class="navbar-site scroll"
-			navbar_prefix="navbar__"   
-			navbar_mod="  "
-		]]
+			tpl="/src/block/site/default/navbar/navbar.html"
+			navbar_prefix="navbar__"
+			navbar_mod="is--scroll"
+		]] 
 		[[azbntple  
 			tpl="/src/block/site/page/action-card.html"
 			content_prefix="content-block__"       
