--- a/src/html/sitemap.html
+++ b/src/html/sitemap.html
@@ -7,12 +7,11 @@
 			description=" "
 		]] 		
 	</head>
-	<body class="is--navbar-bottom">
+	<body>
 		[[azbntple 
-			tpl="/src/block/site/default/navbar/.html"
-			class="navbar-site scroll"
-			navbar_prefix="navbar__"   
-			navbar_mod="  "     
+			tpl="/src/block/site/default/navbar/navbar.html"
+			navbar_prefix="navbar__"
+			navbar_mod="is--scroll"
 		]] 
 		[[azbntple  
 			tpl="/src/block/site/page/sitemap.html"
