--- a/src/html/style.html
+++ b/src/html/style.html
@@ -9,10 +9,9 @@
 	</head>
 	<body class="  "> 
 		[[azbntple 
-			tpl="/src/block/site/default/navbar/.html"
-			class="navbar-site scroll"
-			navbar_prefix="navbar__"   
-			navbar_mod="is--index"     
+			tpl="/src/block/site/default/navbar/navbar.html"
+			navbar_prefix="navbar__"
+			navbar_mod="is--scroll"
 		]] 
 		[[azbntple  
 			tpl="/src/block/site/page/style.html"
