--- a/style.html
+++ b/style.html
@@ -22,7 +22,7 @@
 <link href="/css/site.css" rel="stylesheet"> 		
 	</head>
 	<body class="  "> 
-		<nav class="navbar-site scroll navbar is--index">
+		<nav class="navbar__block  is--scroll  navbar">
 	<div class="navbar__inner">
 		<div class="container navbar__container">
 			<div class="navbar__header">
