--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,10 +9,9 @@
 	</head>
 	<body class="is--index-page"> 
 		[[azbntple 
-			tpl="/src/block/site/default/navbar/.html"
-			class="navbar-site scroll"
+			tpl="/src/block/site/default/navbar/navbar.html"
 			navbar_prefix="navbar__"
-			navbar_mod="is--index"
+			navbar_mod="is--scroll  is--index"
 		]] 
 		[[azbntple 
 			tpl="/src/block/site/default/header/panel.html"
