--- a/src/html/services-card.html
+++ b/src/html/services-card.html
@@ -7,13 +7,12 @@
 			description=" "
 		]] 		
 	</head>
-	<body> 
+	<body>
 		[[azbntple 
-			tpl="/src/block/site/default/navbar/.html"
-			class="navbar-site scroll"
-			navbar_prefix="navbar__"   
-			navbar_mod="  "
-		]]
+			tpl="/src/block/site/default/navbar/navbar.html"
+			navbar_prefix="navbar__"
+			navbar_mod="is--scroll"
+		]] 
 		[[azbntple  
 			tpl="/src/block/site/page/services-card.html"
 			content_prefix="content-block__"       
