fix navbar humb

--- a/src/block/site/default/navbar/navbar.html
+++ b/src/block/site/default/navbar/navbar.html
@@ -1,14 +1,16 @@
-<nav class="{{navbar_prefix}}block  {{navbar_mod}}  navbar">
+<nav class="{{navbar_prefix}}block  {{navbar_mod}}">
 	<div class="{{navbar_prefix}}inner">
 		<div class="container {{navbar_prefix}}container">
 			<div class="{{navbar_prefix}}header">
 				<div class="row {{navbar_prefix}}row-header ">
 					<div class="cols {{navbar_prefix}}cols-header  is--hamburger">
 						<div class="{{navbar_prefix}}hamburger">
-							<button class="{{navbar_prefix}}hamburger-btn hamburger__item" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" data-toggle-nav=".navbar-site" data-body="html" data-collapse-nav=".navbar__collapse">
-								<span class="hamburger__line  is--left"></span>
-								<span class="hamburger__line  is--center"></span>
-								<span class="hamburger__line  is--right"></span>
+							<button class="{{navbar_prefix}}hamburger-card" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" data-toggle-nav=".navbar-site" data-body="html" data-collapse-nav=".navbar__collapse">
+								<span class="{{navbar_prefix}}hamburger-card-inner">
+									<span class="{{navbar_prefix}}hamburger-card-line  is--left"></span>
+									<span class="{{navbar_prefix}}hamburger-card-line  is--center"></span>
+									<span class="{{navbar_prefix}}hamburger-card-line  is--right"></span>
+								</span>
 							</button>
 						</div>
 					</div>
