--- a/style.html
+++ b/style.html
@@ -22,17 +22,19 @@
 <link href="/css/site.css" rel="stylesheet"> 		
 	</head>
 	<body class="  "> 
-		<nav class="navbar__block  is--scroll  navbar">
+		<nav class="navbar__block  is--scroll">
 	<div class="navbar__inner">
 		<div class="container navbar__container">
 			<div class="navbar__header">
 				<div class="row navbar__row-header ">
 					<div class="cols navbar__cols-header  is--hamburger">
 						<div class="navbar__hamburger">
-							<button class="navbar__hamburger-btn hamburger__item" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" data-toggle-nav=".navbar-site" data-body="html" data-collapse-nav=".navbar__collapse">
-								<span class="hamburger__line  is--left"></span>
-								<span class="hamburger__line  is--center"></span>
-								<span class="hamburger__line  is--right"></span>
+							<button class="navbar__hamburger-card" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" data-toggle-nav=".navbar-site" data-body="html" data-collapse-nav=".navbar__collapse">
+								<span class="navbar__hamburger-card-inner">
+									<span class="navbar__hamburger-card-line  is--left"></span>
+									<span class="navbar__hamburger-card-line  is--center"></span>
+									<span class="navbar__hamburger-card-line  is--right"></span>
+								</span>
 							</button>
 						</div>
 					</div>
