--- a/src/block/site/default/form/include.html
+++ b/src/block/site/default/form/include.html
@@ -8,12 +8,22 @@
 		form_id="fsrev"
 		form_mod="is--reviews" 
 		form_color="  "
-		form_heading="Оставьте свой отзыв о нашей работе"
-		form_heading_small="<p>Команда компании ОкнаStory будет признательна всем заказчикам, для которых трудились наши специалисты, за&nbsp;отзывы о&nbsp;проделанной работе и&nbsp;реализованных проектах. Каждый отзыв действительных и&nbsp;потенциальных клиентов дорог для компании, поскольку наличие обратной связи&nbsp;— обязательное условие для развития и&nbsp;совершенствования</p>"
+		form_heading_mod="is--form-panel  is--center"
+		form_heading="Оставьте свой отзыв"
+		form_heading_small="  "
 		form_btn_name="Отправить"
 		form_btn_mod="  "
 	]]
 </div>
+<div style="margin-bottom: 20px; max-width: 315px;">
+	[[azbntple 
+		tpl="/src/block/site/default/form/search.html"
+		block_prefix="form__"
+		block_mod="  "
+		block_mod_elem="  "
+		block_placeholder="Поиск по названию платья"
+	]]
+</div> 
 <div style="margin-bottom: 20px">
 	[[azbntple 
 		tpl="8/src/block/site/default/form/panel.html" 
@@ -27,17 +37,5 @@
 		form_heading_small="  "
 		form_btn_name="Отправить"
 		form_btn_mod="is--block"
-	]]
-</div>
-<div>
-	[[azbntple 
-		tpl="8/src/block/site/default/form/search.html"
-		form_prefix="form__"
-		form_id="fss"
-		form_mod="is--search" 
-		form_heading="  " 
-		form_color="  "
-		form_btn_mod="is--sm"
-		form_btn_name="Искать"
 	]]
 </div>
