--- a/src/block/site/default/table/panel.html
+++ b/src/block/site/default/table/panel.html
@@ -11,19 +11,19 @@
 				<tbody> 
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs">[[azbntple tpl="/src/block/site/default/svg-sprite/.html" icon-name="ruble" ]]</span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs">[[azbntple tpl="/src/block/site/default/svg-sprite/.html" icon-name="ruble" ]]</span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs">[[azbntple tpl="/src/block/site/default/svg-sprite/.html" icon-name="ruble" ]]</span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs">[[azbntple tpl="/src/block/site/default/svg-sprite/.html" icon-name="ruble" ]]</span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 				</tbody>
 			</table>
